# AperMake

./: .gitmodules  CMakeLists.txt  README.md  project.amanifest
cmake/: apermake_data.cmake.in
executable/: CMakeLists.txt  subproject.amanifest
executable/src/: main.cpp
modules/lang/cpp/: cpp.ascript  cpp.lua  cpp.toml
